--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,26 +89,29 @@ if ("${OPENSSL_ROOT_DIR}" STREQUAL "")
    endif()
 endif()
 
+# WASM runtimes to enable. Each runtime in this list will have:
+#  * definition EOSIO_<RUNTIME>_RUNTIME_ENABLED defined in public libchain interface
+#  * ctest entries with --runtime
 list(APPEND EOSIO_WASM_RUNTIMES wabt)   #always enable wabt; it works everywhere and parts of eosio still assume it's always available
 if(CMAKE_SIZEOF_VOID_P EQUAL 8 AND NOT WIN32)
-    list(APPEND EOSIO_WASM_RUNTIMES wavm)
-    # WAVM requires LLVM, but move the check up here to a central location so that the EosioTester.cmakes
-    # can be created with the exact version found
-    find_package(LLVM REQUIRED CONFIG)
-#    if(LLVM_VERSION_MAJOR VERSION_LESS 7 OR LLVM_VERSION_MAJOR VERSION_GREATER 9)
-#        message(FATAL_ERROR "EOSIO requires an LLVM version 7.0 to 9.0")
-#    endif()
+   list(APPEND EOSIO_WASM_RUNTIMES wavm)
+   # WAVM requires LLVM, but move the check up here to a central location so that the EosioTester.cmakes
+   # can be created with the exact version found
+   find_package(LLVM REQUIRED CONFIG)
+   if(LLVM_VERSION_MAJOR VERSION_LESS 7 OR LLVM_VERSION_MAJOR VERSION_GREATER 9)
+	   message(FATAL_ERROR "EOSIO requires an LLVM version 7.0 to 9.0")
+   endif()
 
-    if("${CMAKE_SYSTEM_NAME}" STREQUAL "Linux" AND "${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "x86_64")
-        list(APPEND EOSIO_WASM_RUNTIMES eos-vm-oc)
-    endif()
+   if("${CMAKE_SYSTEM_NAME}" STREQUAL "Linux" AND "${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "x86_64")
+      list(APPEND EOSIO_WASM_RUNTIMES eos-vm-oc)
+   endif()
 endif()
 
 if(CMAKE_SIZEOF_VOID_P EQUAL 8 AND NOT WIN32)
-    list(APPEND EOSIO_WASM_RUNTIMES eos-vm)
-    if(CMAKE_SYSTEM_PROCESSOR STREQUAL x86_64)
-        list(APPEND EOSIO_WASM_RUNTIMES eos-vm-jit)
-    endif()
+   list(APPEND EOSIO_WASM_RUNTIMES eos-vm)
+   if(CMAKE_SYSTEM_PROCESSOR STREQUAL x86_64)
+      list(APPEND EOSIO_WASM_RUNTIMES eos-vm-jit)
+   endif()
 endif()
 
 if(UNIX)
