--- a/libraries/chain/CMakeLists.txt
+++ b/libraries/chain/CMakeLists.txt
@@ -6,41 +6,45 @@ file(GLOB HEADERS "include/eosio/chain/*.hpp"
                   "${CMAKE_CURRENT_BINARY_DIR}/include/eosio/chain/core_symbol.hpp" )
 
 if(APPLE AND UNIX)
-    set(PLATFORM_TIMER_IMPL platform_timer_macos.cpp)
+   set(PLATFORM_TIMER_IMPL platform_timer_macos.cpp)
 else()
-    try_run(POSIX_TIMER_TEST_RUN_RESULT POSIX_TIMER_TEST_COMPILE_RESULT ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/platform_timer_posix_test.c)
-    if(POSIX_TIMER_TEST_RUN_RESULT EQUAL 0)
-        set(PLATFORM_TIMER_IMPL platform_timer_posix.cpp)
-    else()
-        set(PLATFORM_TIMER_IMPL platform_timer_asio_fallback.cpp)
-    endif()
+   try_run(POSIX_TIMER_TEST_RUN_RESULT POSIX_TIMER_TEST_COMPILE_RESULT ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/platform_timer_posix_test.c)
+   if(POSIX_TIMER_TEST_RUN_RESULT EQUAL 0)
+      set(PLATFORM_TIMER_IMPL platform_timer_posix.cpp)
+   else()
+      set(PLATFORM_TIMER_IMPL platform_timer_asio_fallback.cpp)
+   endif()
+endif()
+
+if("wavm" IN_LIST EOSIO_WASM_RUNTIMES)
+   set(CHAIN_WAVM_SOURCES "webassembly/wavm.cpp")
 endif()
 
 if("eos-vm-oc" IN_LIST EOSIO_WASM_RUNTIMES)
-    set(CHAIN_EOSVMOC_SOURCES webassembly/eos-vm-oc/code_cache.cpp
-            webassembly/eos-vm-oc/executor.cpp
-            webassembly/eos-vm-oc/memory.cpp
-            webassembly/eos-vm-oc/intrinsic.cpp
-            webassembly/eos-vm-oc/LLVMJIT.cpp
-            webassembly/eos-vm-oc/LLVMEmitIR.cpp
-            webassembly/eos-vm-oc/compile_monitor.cpp
-            webassembly/eos-vm-oc/compile_trampoline.cpp
-            webassembly/eos-vm-oc/ipc_helpers.cpp
-            webassembly/eos-vm-oc/gs_seg_helpers.c
-            webassembly/eos-vm-oc.cpp)
+   set(CHAIN_EOSVMOC_SOURCES webassembly/eos-vm-oc/code_cache.cpp
+                             webassembly/eos-vm-oc/executor.cpp
+                             webassembly/eos-vm-oc/memory.cpp
+                             webassembly/eos-vm-oc/intrinsic.cpp
+                             webassembly/eos-vm-oc/LLVMJIT.cpp
+                             webassembly/eos-vm-oc/LLVMEmitIR.cpp
+                             webassembly/eos-vm-oc/compile_monitor.cpp
+                             webassembly/eos-vm-oc/compile_trampoline.cpp
+                             webassembly/eos-vm-oc/ipc_helpers.cpp
+                             webassembly/eos-vm-oc/gs_seg_helpers.c
+                             webassembly/eos-vm-oc.cpp)
 
         list(APPEND CHAIN_EOSVMOC_SOURCES webassembly/eos-vm-oc/llvmWARshim.cpp)
 
-    llvm_map_components_to_libnames(LLVM_LIBS support core passes mcjit native orcjit)
-    include_directories(${LLVM_INCLUDE_DIRS})
-    add_definitions(${LLVM_DEFINITIONS})
+   llvm_map_components_to_libnames(LLVM_LIBS support core passes mcjit native orcjit)
+   include_directories(${LLVM_INCLUDE_DIRS})
+   add_definitions(${LLVM_DEFINITIONS})
 
-    option(EOSVMOC_ENABLE_DEVELOPER_OPTIONS "enable developer options for EOS VM OC" OFF)
+   option(EOSVMOC_ENABLE_DEVELOPER_OPTIONS "enable developer options for EOS VM OC" OFF)
 endif()
 
 if("eos-vm" IN_LIST EOSIO_WASM_RUNTIMES OR "eos-vm-jit" IN_LIST EOSIO_WASM_RUNTIMES)
-    set(CHAIN_EOSVM_SOURCES "webassembly/eos-vm.cpp")
-    set(CHAIN_EOSVM_LIBRARIES eos-vm)
+   set(CHAIN_EOSVM_SOURCES "webassembly/eos-vm.cpp")
+   set(CHAIN_EOSVM_LIBRARIES eos-vm)
 endif()
 
 ## SORT .cpp by most likely to change / break compile
@@ -101,13 +105,13 @@ target_link_libraries( eosio_chain fc chainbase Logging IR WAST WASM Runtime
 target_include_directories( eosio_chain
                             PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include" "${CMAKE_CURRENT_BINARY_DIR}/include"
                                    "${CMAKE_CURRENT_SOURCE_DIR}/../wasm-jit/Include"
-                                    "${CMAKE_CURRENT_SOURCE_DIR}/libraries/eos-vm/include"
-                                    "${CMAKE_SOURCE_DIR}/libraries/wabt"
+                                   "${CMAKE_CURRENT_SOURCE_DIR}/libraries/eos-vm/include"
+                                   "${CMAKE_SOURCE_DIR}/libraries/wabt"
                                    "${CMAKE_BINARY_DIR}/libraries/wabt"
                             )
 
 if("eos-vm-oc" IN_LIST EOSIO_WASM_RUNTIMES)
-    target_link_libraries(eosio_chain "-Wl,-wrap=main")
+   target_link_libraries(eosio_chain "-Wl,-wrap=main")
 endif()
 
 foreach(RUNTIME ${EOSIO_WASM_RUNTIMES})
@@ -116,17 +120,16 @@ foreach(RUNTIME ${EOSIO_WASM_RUNTIMES})
    target_compile_definitions(eosio_chain PUBLIC "EOSIO_${RUNTIMEUC}_RUNTIME_ENABLED")
 endforeach()
 
+if(EOSVMOC_ENABLE_DEVELOPER_OPTIONS)
+   message(WARNING "EOS VM OC Developer Options are enabled; these are NOT supported")
+   target_compile_definitions(eosio_chain PUBLIC EOSIO_EOS_VM_OC_DEVELOPER)
+endif()
+
 install( TARGETS eosio_chain
    RUNTIME DESTINATION ${CMAKE_INSTALL_FULL_BINDIR}
    LIBRARY DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR}
    ARCHIVE DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR}
 )
-
-if(EOSVMOC_ENABLE_DEVELOPER_OPTIONS)
-    message(WARNING "EOS VM OC Developer Options are enabled; these are NOT supported")
-    target_compile_definitions(eosio_chain PUBLIC EOSIO_EOS_VM_OC_DEVELOPER)
-endif()
-
 install( DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/eosio/chain/
       DESTINATION ${CMAKE_INSTALL_FULL_INCLUDEDIR}/eosio/chain
       FILES_MATCHING PATTERN "*.hpp" PATTERN "*.h" EXCLUDE
