Add cmake modules

--- a/libraries/wasm-jit/Source/Runtime/CMakeLists.txt
+++ b/libraries/wasm-jit/Source/Runtime/CMakeLists.txt
@@ -1,5 +1,9 @@
-set(LLVM_SHIM_FILE llvmWARshim.cpp)
-
+if(LLVM_VERSION VERSION_LESS 7.1 AND CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+	enable_language(ASM-LLVMWAR)
+	set(LLVM_SHIM_FILE llvmWARshim.llvmwar)
+else()
+	set(LLVM_SHIM_FILE llvmWARshim.cpp)
+endif()
 set(Sources
 	Intrinsics.cpp
 	Linker.cpp
